# buun-llama-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  tcq_dequant_kernel.md
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  pflash-graph.cpp  pflash-graph.h  pflash-loader.cpp  pflash-loader.h  pflash-score.cpp  pflash-score.h  pflash.cpp  pflash.h  speculative.cpp  speculative.h
examples/speculative-simple/: speculative-simple.cpp
ggml/include/: ggml.h
ggml/src/: ggml.c
gguf-py/gguf/: constants.py  quants.py  tensor_mapping.py
include/: llama.h
nccl-windows/: nccl64_134.13.3Config.cmake
nccl-windows/windows/: CMakeLists.txt  nccl.11.7.vcxproj  nccl.11.8.vcxproj  nccl.12.0.vcxproj  nccl.12.1.vcxproj  nccl.12.2.vcxproj  nccl.12.3.vcxproj  nccl.13.3.rc  nccl.13.3.vcxproj  nccl.sln
nccl-windows/windows/x64/Release/: nccl64_134.13.3.exp
nccl-windows/windows/x64/Release/obj.13.3/: all_gather.cu.cache  all_reduce.cu.cache  broadcast.cu.cache  core.cu.cache  libwrap.cu.cache  nccl64_134.13.3.dll.recipe  reduce.cu.cache  reduce_scatter.cu.cache
nccl-windows/windows/x64/Release/obj.13.3/nccl.13.3.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  nccl.13.3.lastbuildstate
src/: llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid.cpp  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama.cpp
(+67 files in other folders)
